# SmartHire-Gateway

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  tasks.ps1
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  dependencies.py
backend/app/api/routers/: __init__.py  admin_users.py  auth.py  candidates.py  health.py  whatsapp.py
backend/app/core/: __init__.py  config.py  logging_config.py  security.py
backend/app/models/: request_models.py  response_models.py
backend/app/repositories/: __init__.py  audit_repository.py  drive_repository.py  sheets_repository.py  user_repository.py
backend/app/services/: __init__.py  ai_parser_service.py  auth_service.py  ingestion_service.py  ocr_service.py  parsing_service.py  storage_service.py  whatsapp_service.py
backend/app/tests/: conftest.py  test_auth.py  test_parsing.py  test_whatsapp_webhook.py
backend/app/utils/: __init__.py  file_utils.py  resume_extractors.py  text_cleaning.py
backend/app/workers/: __init__.py  tasks.py
backend/config/: google_client.py  oauth_settings.sample.json  twilio_client.py
backend/scripts/: bootstrap_data.py  verify_env.py
deploy/: Dockerfile  ci.yml  docker-compose.yml
docs/: architecture.md  demo_script.md  setup_guide.md
frontend/: package-lock.json  package.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.jsx  styles.css
frontend/src/components/: NavBar.jsx  ProtectedRoute.jsx  StatCard.jsx
frontend/src/pages/: Dashboard.jsx  Login.jsx
frontend/src/services/: admin.js  api.js  auth.js  candidates.js
