[project]
name = "smarthire-gateway"
version = "0.1.0"
description = "AI-driven WhatsApp CV management demo."
requires-python = ">=3.10"
authors = [
    {name = "Rajnish Kumar"}
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["backend/app/tests"]
filterwarnings = [
    "ignore::DeprecationWarning"
]

